--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ header h1 {
 		font-size: 2.2em;
 	}
 }
-@media (min-width: 1300px) {
+@media (min-width: 1001px) and (max-width: 1300px) {
 	.photo:first-of-type {
 		width: 90%
 	}
